--- a/requirements/requirements.in
+++ b/requirements/requirements.in
@@ -4,6 +4,7 @@ django-filter==24.2
 Django==5.0.7
 djangorestframework-simplejwt==5.3.1
 djangorestframework==3.15.2
+factory-boy==3.3.0
 gunicorn==22.0.0
 psycopg2==2.9.9
 pytest==8.3.1
