--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -47,6 +47,10 @@ djangorestframework==3.15.2
     #   djangorestframework-simplejwt
 djangorestframework-simplejwt==5.3.1
     # via -r requirements.in
+factory-boy==3.3.0
+    # via -r requirements.in
+faker==26.0.0
+    # via factory-boy
 gunicorn==22.0.0
     # via -r requirements.in
 idna==3.4
@@ -70,7 +74,9 @@ pyjwt==2.8.0
 pytest==8.3.1
     # via -r requirements.in
 python-dateutil==2.9.0.post0
-    # via celery
+    # via
+    #   celery
+    #   faker
 redis==5.0.7
     # via -r requirements.in
 requests==2.32.3
