--- a/requirements/requirements.in
+++ b/requirements/requirements.in
@@ -7,6 +7,7 @@ djangorestframework==3.15.2
 factory-boy==3.3.0
 gunicorn==22.0.0
 psycopg2==2.9.9
+pytest-django==4.8.0
 pytest==8.3.1
 redis==5.0.7
 requests==2.32.3
