--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -72,6 +72,10 @@ psycopg2==2.9.9
 pyjwt==2.8.0
     # via djangorestframework-simplejwt
 pytest==8.3.1
+    # via
+    #   -r requirements.in
+    #   pytest-django
+pytest-django==4.8.0
     # via -r requirements.in
 python-dateutil==2.9.0.post0
     # via
