--- a/requirements/requirements.in
+++ b/requirements/requirements.in
@@ -1,9 +1,10 @@
-celery==5.4.0
+celery==5.5.3
 django-allauth==65.6.0
 django-cors-headers==4.6.0
 django-debug-toolbar==4.4.6
 django-filter==24.2
 django-ipware==4.0.2
+django-oauth-toolkit==3.1.0
 Django==5.0.7
 djangorestframework-simplejwt==5.5.0
 djangorestframework==3.15.2
@@ -14,6 +15,7 @@ google-auth-oauthlib==1.2.1
 google-auth-oauthlib==1.2.1
 google-auth==2.38.0
 gunicorn==22.0.0
+pip-tools>=7.5.2
 psycopg2-binary==2.9.10
 pytest-django==4.8.0
 pytest==8.3.1
